microservice1/microservice_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice1
  labels:
    app: microservice1
    service: microservice1
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: microservice1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1-v1
  labels:
    app: microservice1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
      version: v1
  template:
    metadata:
      labels:
        app: microservice1
        version: v1
    spec:
      serviceAccountName: backend-microservice1
      containers:
      - name: microservice1
        image: giodimagio/microservice1:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "1"
            memory: "1024Mi"
          requests:
            cpu: "0.2"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
---
